--- a/models/src_sql_server_dbo.yml
+++ b/models/src_sql_server_dbo.yml
@@ -1,8 +1,8 @@
 version: 2
 
 sources:
-  - name: google_sheets # name of the source
-    schema: google_sheets # this is the schema our raw data lives in
+  - name: sql_server_dbo # name of the source
+    schema: sql_server_dbo # this is the schema our raw data lives in
     database: ALUMNO26_DEV_BRONZE_DB # this is the name of our database
 
     quoting:
@@ -73,6 +73,14 @@ sources:
           - name: inventory
           - name: _fivetran_deleted
           - name: _fivetran_synced
+      - name: promos
+        loaded_at_field: _fivetran_synced
+        columns:
+          - name: promo_id
+          - name: discount
+          - name: status
+          - name: _fivetran_deleted
+          - name: _fivetran_synced          
       - name: users
         loaded_at_field: _fivetran_synced
         columns:
