--- a/models/marts/core/_core.yml
+++ b/models/marts/core/_core.yml
@@ -1,73 +1,32 @@
 version: 2
 
 models:
-  - name: addresses
+  - name: dim_address
     columns:
       - name: address_id
-        tests:
-          - not_null
-          - unique
       - name: zipcode
-        tests:
-          - not_null
       - name: country
-        tests:
-          - not_null
       - name: address
-        tests:
-          - not_null
       - name: state
-        tests:
-          - not_null
       - name: date_load
-        tests:
-          - not_null
-  - name: events
+  - name: dim_events
     columns:
       - name: event_id
-        tests:
-          - not_null
-          - unique
       - name: page_url
       - name: event_type
-        tests:
-          - not_null
-          - accepted_values:
-              values:
-                ["checkout", "package_shipped", "add_to_cart", "page_view"]
       - name: user_id
-        tests:
-          - not_null
-          - unique
-          - relationships:
-              field: user_id
-              to: ref('sql_server_dbo','events')
       - name: product_id
       - name: session_id
-        tests:
-          - not_null
       - name: created_at
-        tests:
-          - not_null
       - name: order_id
       - name: date_load
-        tests:
-          - not_null
-  - name: orders
+  - name: dim_orders
     columns:
       - name: order_id
-        tests:
-          - not_null
       - name: shipping_service
       - name: shipping_cost_dollars
-        tests:
-          - positive_values
       - name: address_id
-        tests:
-          - not_null
       - name: created_at_utc
-        tests:
-          - not_null
       - name: promo_id
       - name: estimated_delivery_at_utc
       - name: order_cost_dollars
@@ -77,37 +36,27 @@ models:
       - name: tracking_id
       - name: status
       - name: date_load
-  - name: order_items
+  - name: fct_order_items
     columns:
       - name: order_id
       - name: product_id
       - name: quantity
       - name: date_load
-  - name: products
+  - name: dim_products
     columns:
       - name: product_id
       - name: price
       - name: name
       - name: inventory
       - name: date_load
-  - name: promos
+  - name: dim_promos
     columns:
       - name: promokey_id
-        tests:
-          - not_null
-          - relationships:
-              field: 'promo_id'
-              to: ref('sql_server', 'orders')
       - name: promo_id
-        tests:
-          - not_null
-          - relationships:
-              field: 'promo_id'
-              to: ref('sql_server', 'orders')
       - name: discount
       - name: status
       - name: date_load
-  - name: users
+  - name: dim_users
     columns:
       - name: user_id
       - name: updated_at
@@ -119,15 +68,7 @@ models:
       - name: first_name
       - name: email
       - name: date_load
-  - name: usuarios
-    columns:
-      - name: user_id
-      - name: first_name
-      - name: last_name
-      - name: address_id
-      - name: phone_number
-      - name: _fivetran_synced
-  - name: fechas
+  - name: dim_date
     columns:
       - name: fecha_forecast
       - name: id_date
