--- a/models/staging/google_sheets/src_google_sheets.yml
+++ b/models/staging/google_sheets/src_google_sheets.yml
@@ -1,10 +1,10 @@
 version: 2
 
 sources:
-  - name: google_sheets # name of the source
-    schema: google_sheets # this is the schema our raw data lives in
-    database: ALUMNO26_DEV_BRONZE_DB # this is the name of our database
 
+  - name: google_sheets # name of the source 
+    schema: google_sheets # this is the schema our raw data lives in
+    database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"  # this is the name of our database
     quoting:
       database: false
       schema: false
